[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/asset-manager/PlacingPreviewer.gd" type="Script" id=1]
[ext_resource path="res://addons/asset-manager/EntityDrop.wav" type="AudioStream" id=2]
[ext_resource path="res://addons/asset-manager/EntityDrag.wav" type="AudioStream" id=3]
[ext_resource path="res://addons/asset-manager/star_icon.png" type="Texture" id=4]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Preview" type="Polygon2D" parent="."]
visible = false
polygon = PoolVector2Array( 0, 0, 16, 32, 32, 16 )

[node name="TextureRect" type="TextureRect" parent="Preview"]
margin_left = 24.0
margin_top = 40.0
margin_right = 88.0
margin_bottom = 104.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Preview"]
margin_left = 24.0
margin_top = 24.0
margin_right = 130.0
margin_bottom = 38.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Item"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioDrag" type="AudioStreamPlayer" parent="Preview"]
stream = ExtResource( 3 )
volume_db = -16.0
pitch_scale = 0.9

[node name="AudioDrop" type="AudioStreamPlayer" parent="Preview"]
stream = ExtResource( 2 )
volume_db = -16.0

[node name="Tween" type="Tween" parent="Preview"]

[node name="InstancePreview" type="Node2D" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.705882 )

[node name="Scene" type="Node2D" parent="InstancePreview"]

[node name="Info" type="Label" parent="InstancePreview"]
margin_left = 32.0
margin_right = 138.0
margin_bottom = 14.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Rotation: 45"
__meta__ = {
"_edit_use_anchors_": false
}
